--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/wherehouse123456
-spring.datasource.password=123456qwerty
+spring.datasource.url=jdbc:postgresql://localhost:5432/wherehouse
+spring.datasource.password=7907
 spring.datasource.username=postgres
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-spring.data.rest.base-path=/api
+server.port=8088
